'update multi-e-atoms'

--- a/ch06/lin_var.ipynb
+++ b/ch06/lin_var.ipynb
@@ -11,8 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{admonition} What you need to know\n",
+    ":class: note\n",
+    "\n",
     "- The variational method is a powerful method that can be used to determine upper bounds and approximations for ground state energies of numerous quantum mechanical problems.  \n",
-    "- The variational method is used heavily in electronic structure theories such as Hartree Fock."
+    "- The variational method is used heavily in electronic structure theories such as Hartree Fock.\n",
+    "- The linear varaation method is seeking solutions to Schrodinger equation by expressing trial wavefunctions as linear combinations of easy to compute functions like gaussians or exponential.\n",
+    "- The linear variational method converts Schrodinger equation into linear algebra problem of finding eigenvalues (energies) and eigenvectors (coefficients in linear combination)\n",
+    "\n",
+    ":::"
    ]
   },
   {
