--- a/_sources/demos/sympy.ipynb
+++ b/_sources/demos/sympy.ipynb
@@ -59,7 +59,7 @@
         }
       ],
       "source": [
-        "x, c, m = symbols('x c m')\n",
+        "x, c, m = symbols('x y a b c m')\n",
         "\n",
         "x"
       ]
@@ -72,15 +72,13 @@
       "source": [
         "### Common SymPy Functions\n",
         "\n",
-        "Similar to the `math` Python module, SymPy contains an assortment of standard mathematical operators such as square root and trigonometric functions. A table of common functions is below. Some of the functions start with a capital letter such as `Abs()`. This is important so that they do not collide with native Python functions if SymPy is imported into the global namespace.\n",
+        "SymPy contains an assortment of standard mathematical operators such as square root and trigonometric functions. A table of common functions is below. \n",
         "\n",
         "|      |       |        |        |        |\n",
         "| :--: | :---: | :---:  | :---:  | :----: |   \n",
         "|`Abs()`| `sin()` | `cos()` | `tan()`| `cot()` |\n",
         "|`sec()` | `csc()` | `asin()` | `acos()` | `atan()` |\n",
-        "|`ceiling()` | `floor()` | `Min()` | `Max()` | `sqrt()` |\n",
-        "\n",
-        "It is important to note that any mathematical function operating on a symbol needs to be from the SymPy library. For example, using a `math.cos()` function from the `math` Python modeule will result in an error."
+        "|`ceiling()` | `floor()` | `Min()` | `Max()` | `sqrt()` |\n"
       ]
     },
     {
@@ -91,7 +89,7 @@
       "source": [
         "### Common Algebraic Methods\n",
         "\n",
-        "SymPy is quite capable at algebraic operations and is knowledgeable of common identities such as $sin(x)^2 + cos(x)^2 = 1$, but before we proceed with doing algebra in SymPy, we need to cover some basic algebraic methods. These are provided in Table 3 which includes polynomial expansion and factoring, expression simplification, and solving equations. The subsequent sections demonstrate each of these.\n",
+        "SymPy is quite capable at algebraic operations. Some of the most important ones are listed in the table below. We will focus on those\n",
         "\n",
         "| Method | Description |\n",
         "|:------:|:----------  |\n",
@@ -536,7 +534,7 @@
         "id": "E84qcuP5agUP"
       },
       "source": [
-        "### Series\n",
+        "### Taylor Series\n",
         "\n",
         "Series expansion is also one of the most useful features of a CAS. In SymPy we can perform a series expansion of an expression using the series function:"
       ]
