--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cookbook: Using python to tame the math"
+    "# Cookbook\n",
+    "\n",
+    "### Using python to tame the math!"
    ]
   },
   {
