deploy: 824e197c540debceed059f03612e659fc50e44c5

--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hit enter to importa all these goodies\n",
     "import numpy as np  \n",
+    "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact\n",
     "import scipy  \n",
@@ -47,8 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Define the range of x values\n",
     "x = np.linspace(0, 2 * np.pi, 1000)\n",
     "\n",
@@ -71,11 +71,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "\n",
     "# Define the symbolic variable\n",
     "x = sp.symbols('x')\n",
     "\n",
@@ -98,13 +98,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def plot_orthogonality():\n",
+    "    '''Defining functions to encampuslate code is a good habit'''\n",
     "\n",
     "    # Define the range of x values\n",
     "    x = np.linspace(0, 2 * np.pi, 1000)\n",
