--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -33,7 +33,9 @@
    "source": [
     "### Example-1\n",
     "\n",
-    "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval."
+    "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval. That is you are going to show one of the most ubiquitous equalities in quantum mechanics\n",
+    "\n",
+    "$$\\int^{2\\pi}_0 f_1(x) f_2(x)dx = 0$$"
    ]
   },
   {
