--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hit enter to importa all these goodies\n",
+    "# Hit enter to import all these goodies\n",
     "import numpy as np  \n",
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
@@ -119,7 +119,7 @@
     "    plt.plot(x, y_sin, label='sin(x)')\n",
     "    plt.plot(x, y_cos, label='cos(x)')\n",
     "    \n",
-    "    # Fill the area between two horizontal curves\n",
+    "    # Fill the area between two horizontal curves (optional)\n",
     "    plt.fill_between(x, y_sin * y_cos, alpha=0.3, color='gray', label='sin(x) * cos(x)')\n",
     "    \n",
     "    # Labels and title\n",
