--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example-1\n",
+    "### Example-1: Show orthogonality\n",
     "\n",
     "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval. That is you are going to show one of the most ubiquitous equalities in quantum mechanics\n",
     "\n",
