--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -31,6 +31,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example-0: Use python as calculator\n",
+    "\n",
+    "- Calculate energy and wavelength of photon that has frequency of $4\\cdot 10^{14}$ Hz. You will have to use Planck's equation and wavelength-frequency conversion equations.\n",
+    "\n",
+    "$$E= h\\nu$$\n",
+    "\n",
+    "$$\\lambda = \\frac{c}{\\nu}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Start typing anything inside physica_constnats it will bring it up. \n",
+    "physical_constants['Planck constant']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we also have most common constants ready to use. But you have to remember what are the units!\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# e here tands for 10 and not exponent! exponent is defined via np.exp()\n",
+    "nu = 4e14\n",
+    "\n",
+    "E = h*nu\n",
+    "\n",
+    "print(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lambda is a protected word in pythong cant use it ugh\n",
+    "wavel = c/nu  \n",
+    "\n",
+    "print(wavel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example-1: Show orthogonality\n",
     "\n",
     "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval. That is you are going to show one of the most ubiquitous equalities in quantum mechanics\n",
