--- a/_sources/cookbook.ipynb
+++ b/_sources/cookbook.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hit enter to import all these goodies\n",
     "import numpy as np  \n",
+    "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact\n",
     "import scipy  \n",
@@ -29,9 +31,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example-1\n",
+    "### Example-0: Use python as calculator\n",
     "\n",
-    "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval."
+    "- Calculate energy and wavelength of photon that has frequency of $4\\cdot 10^{14}$ Hz. You will have to use Planck's equation and wavelength-frequency conversion equations.\n",
+    "\n",
+    "$$E= h\\nu$$\n",
+    "\n",
+    "$$\\lambda = \\frac{c}{\\nu}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Start typing anything inside physica_constnats it will bring it up. \n",
+    "physical_constants['Planck constant']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we also have most common constants ready to use. But you have to remember what are the units!\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# e here tands for 10 and not exponent! exponent is defined via np.exp()\n",
+    "nu = 4e14\n",
+    "\n",
+    "E = h*nu\n",
+    "\n",
+    "print(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lambda is a protected word in pythong cant use it ugh\n",
+    "wavel = c/nu  \n",
+    "\n",
+    "print(wavel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example-1: Show orthogonality\n",
+    "\n",
+    "- Show that wavefunctions $f_1 = sin(x)$ and $f_2=cos(x)$ are orthogonal on $(0, 2\\pi)$ interval. That is you are going to show one of the most ubiquitous equalities in quantum mechanics\n",
+    "\n",
+    "$$\\int^{2\\pi}_0 f_1(x) f_2(x)dx = 0$$"
    ]
   },
   {
@@ -47,8 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Define the range of x values\n",
     "x = np.linspace(0, 2 * np.pi, 1000)\n",
     "\n",
@@ -76,8 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "\n",
     "# Define the symbolic variable\n",
     "x = sp.symbols('x')\n",
     "\n",
@@ -105,10 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def plot_orthogonality():\n",
+    "    '''Defining functions to encampuslate code is a good habit'''\n",
     "\n",
     "    # Define the range of x values\n",
     "    x = np.linspace(0, 2 * np.pi, 1000)\n",
@@ -121,7 +178,7 @@
     "    plt.plot(x, y_sin, label='sin(x)')\n",
     "    plt.plot(x, y_cos, label='cos(x)')\n",
     "    \n",
-    "    # Fill the area between two horizontal curves\n",
+    "    # Fill the area between two horizontal curves (optional)\n",
     "    plt.fill_between(x, y_sin * y_cos, alpha=0.3, color='gray', label='sin(x) * cos(x)')\n",
     "    \n",
     "    # Labels and title\n",
