--- a/ch01/BlackBody.ipynb
+++ b/ch01/BlackBody.ipynb
@@ -50,9 +50,9 @@
     "    Returns:\n",
     "    - (float): Spectral radiance in W/(m^2*sr*m).\n",
     "    \"\"\"\n",
-    "    # To avoid overflow, limit the exponent to a reasonable maximum\n",
+    "   \n",
     "    exponent = (h*c) / (wavelength*k*T)\n",
-    "    exponent = np.clip(exponent, None, 700)  # Clip at 700 to avoid overflow\n",
+    "    exponent = np.clip(exponent, None, 700)  # Clip values of exponent at 700 to avoid overflow\n",
     "\n",
     "    return (2.0*h*c**2) / (wavelength**5 * (np.exp(exponent) - 1))\n",
     "    \n",
