--- a/_sources/ch01/BlackBody.ipynb
+++ b/_sources/ch01/BlackBody.ipynb
@@ -52,7 +52,8 @@
     "    \"\"\"\n",
     "   \n",
     "    exponent = (h*c) / (wavelength*k*T)\n",
-    "    exponent = np.clip(exponent, None, 700)  # Clip values of exponent at 700 to avoid overflow\n",
+    "    \n",
+    "    exponent = np.clip(exponent, None, 700)  # Clip values of exponent at 700 to avoid numerical overflow\n",
     "\n",
     "    return (2.0*h*c**2) / (wavelength**5 * (np.exp(exponent) - 1))\n",
     "    \n",
