--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -465,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modes = [1, 2, 3].       # Change mode  numbers (from 1 to 10)\n",
+    "modes = [1, 2, 3]       # Change mode  numbers (from 1 to 10)\n",
     "coefficients = [1, 1, 1] # Change their coefficients (from 0-1)\n",
     "\n",
     "create_animation(modes, coefficients)"
