'norm mode combo'

--- a/ch02/demo_waves.ipynb
+++ b/ch02/demo_waves.ipynb
@@ -401,7 +401,10 @@
     }
    },
    "source": [
-    "For simplicity we will combine two modes with two different mode numbers and shifted with resepct to each ophter by a phase $\\phi$.  "
+    "$$u(x,t) = c_1 u_1 + c_2 u_2 +c_3 u_3 + ...$$\n",
+    "\n",
+    " - $u_n = sin(n \\pi x / L) \\cdot cos(n \\pi  v t / L)$, normal modes\n",
+    " - $c_n=0-1$ coeficients of modes"
    ]
   },
   {
