--- a/ch02/demo_waves.ipynb
+++ b/ch02/demo_waves.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "import numpy as np  \n",
     "import matplotlib.pyplot as plt\n",
+    "import ipywidgets\n",
     "from ipywidgets import interact, interactive, Dropdown\n",
     "from matplotlib.animation import FuncAnimation\n",
     "from IPython.display import HTML\n",
