--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -72,6 +72,7 @@
     "\n",
     "# Calculate the y-values based on the sine wave formula\n",
     "y = np.sin(2 * np.pi * x / L)\n",
+    "\n",
     "# Create the plot\n",
     "plt.plot(x, y, label=f'L = {L}')"
    ]
@@ -80,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets package this into a nice little function so we can reuse it in animations!"
+    "#### Now lets package this into a nice little function so we can reuse it in animations!"
    ]
   },
   {
