--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -71,6 +71,7 @@
     "x = np.linspace(0.0, 1.0, 1000)\n",
     "\n",
     "# Calculate the y-values based on the sine wave formula\n",
+    "L = 1 # specify wavelength\n",
     "y = np.sin(2 * np.pi * x / L)\n",
     "\n",
     "# Create the plot\n",
