--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "tags": [
+        "hide-cell"
+    ],
    "outputs": [
     {
      "name": "stdout",
