--- a/ch02/demo_waves.ipynb
+++ b/ch02/demo_waves.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "tags": ["hide-input"],
    "source": [
     "## DEMO: Visualizing waves  "
    ]
   },
-  {"tags": ["hide-input"]},
+
   {
    "cell_type": "code",
    "execution_count": 1,
