--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "tags": ["hide-input"],
    "source": [
     "## DEMO: Visualizing waves  "
    ]
   },
+
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "tags": [
-        "hide-input"
-    ],
+   
    "outputs": [
     {
      "name": "stdout",
