'test-hide input'

--- a/ch02/demo_waves.ipynb
+++ b/ch02/demo_waves.ipynb
@@ -300,6 +300,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "tags": [
+    "hide-input"
+   ],
    "outputs": [],
    "source": [
     "#@title Animate traveling wave in 3D\n",
