--- a/ch03/note02A.ipynb
+++ b/ch03/note02A.ipynb
@@ -75,96 +75,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solving Schrödinger quation for Particle in a Box (PIB):\n",
+    "### Solving the Schrödinger Equation for the Particle in a Box (PIB)\n",
     "\n",
-    "The Schrödinger equation for PIB, as for any system is defined by a Hamiltonian operator which consists of potential energy with infinitely high values at boundaries of the box and zero inside the box. This form of potential energy ensures that  the \"particle\" stays inside the box where it has acess only to the kinetic energy term.\n",
     "\n",
     ":::{figure-md} markdown-fig\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/1/13/Infinite_potential_well-en.svg\" alt=\"pib1\" class=\"bg-primary mb-1\" width=\"300px\">\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/1/13/Infinite_potential_well-en.svg\" alt=\"Particle in a box\" class=\"bg-primary mb-1\" width=\"300px\">\n",
     "\n",
     "Particle in a box subject to infinitely high potential walls\n",
     ":::\n",
     "\n",
+    "The Schrödinger equation for a particle in a box (PIB) is defined by a Hamiltonian operator that incorporates the potential energy, which is infinitely large at the boundaries of the box and zero inside. This potential ensures that the particle is confined within the box, where it can only possess kinetic energy.\n",
     "\n",
-    "Mathematically, the potential energy is: \n",
+    "- **The potential energy for PIB is defined:**\n",
     "\n",
-    "$$V(x=0)=V(x=L)=\\infty \\,\\,\\,\\,V(0<x<L)=0 $$\n",
+    "$$\n",
+    "V(x) =\n",
+    "\\begin{cases} \n",
+    "\\infty & x = 0 \\text{ or } x = L \\\\ \n",
+    "0 & 0 < x < L\n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n",
-    "The boundary conditions are:\n",
+    "- **The boundary conditions are:**\n",
     "\n",
-    "$$\\psi(x=0)=\\psi(x=L)=0$$\n",
+    "$$\n",
+    "\\psi(0) = \\psi(L) = 0\n",
+    "$$\n",
     "\n",
-    "Hamiltonian operator accounting for kinetic energy is:\n",
+    "- **The Hamiltonian operator** is in this case accounting only for kinetic energy!\n",
     "\n",
-    "$$\\hat{H}= \\hat{K}=-\\frac{\\hbar^2}{2m}\\frac{d^2}{dx^2}$$\n",
+    "$$\n",
+    "\\hat{H} = \\hat{K} = -\\frac{\\hbar^2}{2m} \\frac{d^2}{dx^2}\n",
+    "$$\n",
     "\n",
-    "We have all the necessary ingeredients to solve Schrödinger equation for 1D PIB $\\hat{H}\\psi(x)=E\\psi(x)$: \n",
+    "- Now, we have all the necessary ingredients to solve the time-independent Schrödinger equation for the 1D PIB:\n",
     "\n",
-    "$$-\\frac{\\hbar^2}{2m}\\frac{d^2}{dx^2}\\psi(x)=E\\psi(x),\\,\\,\\,\\,or\\,\\,\\, \\psi''(x)=-k^2 \\psi(x)$$\n",
+    "$$\n",
+    "\\hat{H} \\psi(x) = E \\psi(x)\n",
+    "$$\n",
     "\n",
-    "Where we have defined $k^2=\\frac{2mE}{\\hbar^2}$  as a positive real number."
+    "- Substituting the Hamiltonian, we get:\n",
+    "\n",
+    "$$\n",
+    "-\\frac{\\hbar^2}{2m} \\frac{d^2}{dx^2} \\psi(x) = E \\psi(x)\n",
+    "$$\n",
+    "\n",
+    "or equivalently:\n",
+    "\n",
+    "$$\n",
+    "\\psi''(x) = -k^2 \\psi(x)\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "$$\n",
+    "k^2 = \\frac{2mE}{\\hbar^2}\n",
+    "$$\n",
+    "\n",
+    "is a positive real number that relates the particle's energy \\(E\\) to its wavefunction.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1D PIB looks just like 1D guitar string problem. \n",
+    "### Solution and Boundary Conditions\n",
     "\n",
-    "Mathematically the form of 1D PIB is the same kind fo ODE as the 1D guitar string problem. The differences are in the constant coefficients and the interpretation of wave function!\n",
+    "- Mathematically, the form of the 1D PIB problem is similar to the ordinary differential equation (ODE) used in the 1D vibrating guitar string problem. The key differences lie in the constant coefficients and the interpretation of the wavefunction.\n",
     "\n",
-    "$$\\psi''(x)=-k^2 \\psi(x)$$\n",
+    "$$\n",
+    "\\psi''(x) = -k^2 \\psi(x)\n",
+    "$$\n",
     "\n",
-    "$$\\psi(x)=c_1e^{ikx}+c_2e^{-ikx}=A\\cos(kx)+B\\sin(kx)$$\n",
+    "- The general solution to this differential equation is:\n",
     "\n",
-    "- Applying boundary condition $\\psi(0)=0$ we get $A=0$ and $\\psi(x)=B\\sin(kx)$\n",
-    "- Applying boundary condition $\\psi(L)=B\\sin(kL)=0$ we get $kL=n\\pi$ \n",
+    "$$\n",
+    "\\psi(x) = c_1 e^{ikx} + c_2 e^{-ikx} = A \\cos(kx) + B \\sin(kx)\n",
+    "$$\n",
     "\n",
-    "$$k=\\frac{n\\pi}{L}\\,\\,\\, \\rightarrow\\,\\,\\, \\psi(x)=B \\sin(\\frac{n\\pi}{L}x)$$\n",
+    "- Applying the boundary condition \\(\\psi(0) = 0\\), we find that \\(A = 0\\), leaving us with:\n",
     "\n",
-    "$$k^2 = \\frac{n^2\\pi^2}{L^2}=\\frac{2mE}{\\hbar^2}$$\n",
+    "$$\n",
+    "\\psi(x) = B \\sin(kx)\n",
+    "$$\n",
     "\n",
-    "$$E_n=\\frac{n^2 h^2}{8mL^2}$$\n",
+    "- Applying the boundary condition \\(\\psi(L) = 0\\), we get:\n",
     "\n",
-    "- Quantization results from trapping a wave function in space! This is why bound states have quantized energy.  Atoms, molecules, solids  all have discrete energy levels for very similar reasons."
+    "$$\n",
+    "B \\sin(kL) = 0\n",
+    "$$\n",
+    "\n",
+    "- This condition is satisfied when:\n",
+    "\n",
+    "$$\n",
+    "kL = n\\pi \\quad \\text{or} \\quad k = \\frac{n\\pi}{L}\n",
+    "$$\n",
+    "\n",
+    "- Thus, the wavefunction becomes:\n",
+    "\n",
+    "$$\n",
+    "\\psi(x) = B \\sin\\left(\\frac{n\\pi}{L}x\\right)\n",
+    "$$\n",
+    "\n",
+    "- Using the relationship \\(k^2 = \\frac{n^2\\pi^2}{L^2} = \\frac{2mE}{\\hbar^2}\\), we can express the energy levels as:\n",
+    "\n",
+    "$$\n",
+    "E_n = \\frac{n^2 h^2}{8mL^2}\n",
+    "$$\n",
+    "\n",
+    "- The quantization of energy results from confining the wavefunction within a finite space. This is the reason bound states exhibit quantized energy levels. Atoms, molecules, and solids all possess discrete energy levels due to similar constraints."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wave functions must be normalized\n",
+    "### Wavefunctions Must Be Normalized\n",
     "\n",
-    "Now we will see how requirement of normalization determines the constant coefficient B. \n",
+    "- Next, we determine the constant coefficient \\( B_n \\) by enforcing the normalization condition:\n",
     "\n",
-    "$$\\int^L_0 \\psi_n(x)^2 dx=1 $$\n",
+    "$$\n",
+    "\\int_0^L \\psi_n(x)^2 \\, dx = 1\n",
+    "$$\n",
     "\n",
+    "Substituting the expression for the wavefunction:\n",
     "\n",
-    "$$\\psi_n^*(x) \\psi_n(x)  = B_n^*B_n \\sin^2\\frac{n\\pi x}{a}$$\n",
+    "$$\n",
+    "\\psi_n^*(x) \\psi_n(x) = B_n^2 \\sin^2 \\left(\\frac{n\\pi x}{L}\\right)\n",
+    "$$\n",
     "\n",
-    "We will make use of $\\sin^2(x)=\\frac{1}{2}(1-\\cos(2x))$ trig relation to evaluate integral\n",
+    "- To evaluate the integral, we use the trigonometric identity:\n",
     "\n",
-    "$$B_n^2 \\int^L_0 \\sin^2 \\left(\\frac{n\\pi}{L}x\\right)=\\frac{B_n^2}{2} \\int^L_0 \\left[ 1-\\cos\\left(\\frac{2n\\pi}{L}x\\right) \\right]=\\frac{B_n^2}{2}=1$$\n",
+    "$$\n",
+    "\\sin^2(x) = \\frac{1}{2}(1 - \\cos(2x))\n",
+    "$$\n",
     "\n",
-    "$$B_n=\\Big (\\frac{2}{L}\\Big)^{\\frac{1}{2}} $$"
+    "Applying this identity, we can rewrite the integral as:\n",
+    "\n",
+    "$$\n",
+    "B_n^2 \\int_0^L \\sin^2\\left(\\frac{n\\pi x}{L}\\right) dx = \\frac{B_n^2}{2} \\int_0^L \\left[ 1 - \\cos\\left(\\frac{2n\\pi x}{L}\\right) \\right] dx\n",
+    "$$\n",
+    "\n",
+    "Since the integral of \\(\\cos\\left(\\frac{2n\\pi x}{L}\\right)\\) over a full period from \\(0\\) to \\(L\\) is zero, we are left with:\n",
+    "\n",
+    "$$\n",
+    "\\frac{B_n^2}{2} \\cdot L = 1\n",
+    "$$\n",
+    "\n",
+    "Solving for \\(B_n\\):\n",
+    "\n",
+    "$$\n",
+    "B_n = \\sqrt{\\frac{2}{L}}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eigenfunctions and eigenvalues of 1D particle in a box\n",
+    "### PIB Eigenfunctions and Eigenvalues\n",
     "\n",
-    "- Obtaining and normalizing wavefunctions we completed solution of Schrodinger equation as an eigenfunction eigenvalue problem $\\hat{H}\\psi_n = E_n \\psi_n$ \n",
-    "\n",
-    ":::{admonition}\n",
+    ":::{admonition} **Eigenfunctions and eigenvalues of 1D particle in a box**\n",
     ":class: important \n",
     "\n",
     "$${\\psi_n(x) = \\Big (\\frac{2}{L}\\Big)^{\\frac{1}{2}} \\sin\\frac{n\\pi x}{L}}$$\n",
     "\n",
     "$${E_n=\\frac{n^2 h^2}{8mL^2}}$$\n",
     "\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Full time dependent solution**\n",
+    ":class: important \n",
+    "\n",
+    "$${\\psi_n(x, t) = \\Big (\\frac{2}{L}\\Big)^{\\frac{1}{2}} \\sin\\frac{n\\pi x}{L}}\\cdot e^{-i\\frac{E_n t}{\\hbar}}$$\n",
+    "\n",
+    "$$\\Psi(x,t) = \\sum_n c_n \\psi_n(x, t)$$\n",
+    "\n",
+    "- Where the coefficients $c_n$ depend on initial condition, e.g could be all zero except one (pure state) or a few of them non-zero (mixed state)\n",
+    "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize PIB solutions"
    ]
   },
   {
@@ -219,6 +316,80 @@
     "# Show the plots\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Parameters\n",
+    "L = 1.0  # Length of the box\n",
+    "hbar = 1.0  # Set hbar = 1 for simplicity\n",
+    "m = 1.0  # Set mass = 1 for simplicity\n",
+    "n_states = [1, 2, 3]  # Quantum numbers for the superposition\n",
+    "coeffs = [1, 1, 1]  # Coefficients for the superposition\n",
+    "coeffs = np.array(coeffs) / np.sqrt(np.sum(np.array(coeffs) ** 2))  # Normalize coefficients\n",
+    "\n",
+    "# Define spatial and time arrays\n",
+    "x = np.linspace(0, L, 1000)\n",
+    "t = np.linspace(0, 10, 500)  # Time array\n",
+    "\n",
+    "# Define wavefunction for nth state\n",
+    "def psi_n(n, x, L):\n",
+    "    return np.sqrt(2 / L) * np.sin(n * np.pi * x / L)\n",
+    "\n",
+    "# Define energy for nth state\n",
+    "def energy_n(n, L):\n",
+    "    return (n**2 * np.pi**2 * hbar**2) / (2 * m * L**2)\n",
+    "\n",
+    "# Define time-dependent wavefunction\n",
+    "def psi_total(x, t, L, coeffs, n_states):\n",
+    "    psi_t = np.zeros_like(x, dtype=complex)\n",
+    "    for idx, n in enumerate(n_states):\n",
+    "        psi_x = psi_n(n, x, L)\n",
+    "        E_n = energy_n(n, L)\n",
+    "        time_factor = np.exp(-1j * E_n * t / hbar)\n",
+    "        psi_t += coeffs[idx] * psi_x * time_factor\n",
+    "    return psi_t\n",
+    "\n",
+    "# Set up the figure and axis\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_xlim(0, L)\n",
+    "ax.set_ylim(-2, 2)\n",
+    "line, = ax.plot([], [], lw=2)\n",
+    "\n",
+    "# Initialization function for the plot\n",
+    "def init():\n",
+    "    line.set_data([], [])\n",
+    "    return line,\n",
+    "\n",
+    "# Animation function which updates the plot each frame\n",
+    "def animate(i):\n",
+    "    t_val = t[i]\n",
+    "    psi = psi_total(x, t_val, L, coeffs, n_states)\n",
+    "    psi_real = np.real(psi)\n",
+    "    line.set_data(x, psi_real)\n",
+    "    return line,\n",
+    "\n",
+    "# Create the animation\n",
+    "ani = FuncAnimation(fig, animate, init_func=init, frames=len(t), interval=50, blit=True)\n",
+    "\n",
+    "# Convert animation to HTML\n",
+    "html_video = HTML(ani.to_jshtml())\n",
+    "\n",
+    "# Show the HTML video inline\n",
+    "html_video\n"
    ]
   },
   {
@@ -382,7 +553,7 @@
     "Compute Average momentum for particle in a box \n",
     "\n",
     ":::{admonition} **Solution**\n",
-    ":class: tip, dropdown\n",
+    ":class:  dropdown\n",
     "\n",
     "To compute the average momentum of a particle in a 1D box we start in the usual way\n",
     "\n",
@@ -411,6 +582,11 @@
     "So the average momentum of a particle in a box is zero.  This is because it is equally probable for the particle to be moving forward and backwards.\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
