--- a/ch03/note02A.ipynb
+++ b/ch03/note02A.ipynb
@@ -364,32 +364,49 @@
     "    return psi_t\n",
     "\n",
     "# Set up the figure and axis\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.set_xlim(0, L)\n",
-    "ax.set_ylim(-2, 2)\n",
-    "line, = ax.plot([], [], lw=2)\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(8, 10))\n",
+    "\n",
+    "# Set limits for the wavefunction and wavefunction squared\n",
+    "ax1.set_xlim(0, L)\n",
+    "ax1.set_ylim(-2, 2)\n",
+    "ax2.set_xlim(0, L)\n",
+    "ax2.set_ylim(0, 4)\n",
+    "\n",
+    "# Set labels for the wavefunction plot\n",
+    "ax1.set_xlabel('Position (x)', fontsize=14)\n",
+    "ax1.set_ylabel('Re[$\\psi(x,t)$]', fontsize=14)\n",
+    "ax1.set_title('Time Evolution of Wavefunction', fontsize=16)\n",
+    "\n",
+    "# Set labels for the squared wavefunction plot\n",
+    "ax2.set_xlabel('Position (x)', fontsize=14)\n",
+    "ax2.set_ylabel('$|\\psi(x,t)|^2$', fontsize=14)\n",
+    "ax2.set_title('Probability Density', fontsize=16)\n",
+    "\n",
+    "# Initialize the wavefunction and its square plots\n",
+    "line_real, = ax1.plot([], [], lw=2)\n",
+    "line_prob, = ax2.plot([], [], lw=2)\n",
     "\n",
     "# Initialization function for the plot\n",
     "def init():\n",
-    "    line.set_data([], [])\n",
-    "    return line,\n",
+    "    line_real.set_data([], [])\n",
+    "    line_prob.set_data([], [])\n",
+    "    return line_real, line_prob\n",
     "\n",
     "# Animation function which updates the plot each frame\n",
     "def animate(i):\n",
     "    t_val = t[i]\n",
     "    psi = psi_total(x, t_val, L, coeffs, n_states)\n",
     "    psi_real = np.real(psi)\n",
-    "    line.set_data(x, psi_real)\n",
-    "    return line,\n",
+    "    psi_squared = np.abs(psi)**2\n",
+    "    line_real.set_data(x, psi_real)\n",
+    "    line_prob.set_data(x, psi_squared)\n",
+    "    return line_real, line_prob\n",
     "\n",
     "# Create the animation\n",
     "ani = FuncAnimation(fig, animate, init_func=init, frames=len(t), interval=50, blit=True)\n",
     "\n",
-    "# Convert animation to HTML\n",
-    "html_video = HTML(ani.to_jshtml())\n",
-    "\n",
-    "# Show the HTML video inline\n",
-    "html_video\n"
+    "plt.close(fig)  # Prevents static display of the last frame\n",
+    "HTML(ani.to_jshtml())"
    ]
   },
   {
