--- a/ch03/note02A.ipynb
+++ b/ch03/note02A.ipynb
@@ -342,8 +342,8 @@
     "coeffs = np.array(coeffs) / np.sqrt(np.sum(np.array(coeffs) ** 2))  # Normalize coefficients\n",
     "\n",
     "# Define spatial and time arrays\n",
-    "x = np.linspace(0, L, 1000)\n",
-    "t = np.linspace(0, 10, 500)  # Time array\n",
+    "x = np.linspace(0, L,  200)  # Reduce from 1000 to 500 points in space\n",
+    "t = np.linspace(0, 10, 200)  # Reduce from 500 to 200 time step\n",
     "\n",
     "# Define wavefunction for nth state\n",
     "def psi_n(n, x, L):\n",
